After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737370 - Unnecessary break statements following a goto
Unnecessary break statements following a goto
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-25 15:08 UTC by Luis de Bethencourt
Modified: 2014-09-25 15:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (5.19 KB, patch)
2014-09-25 15:13 UTC, Luis de Bethencourt
accepted-commit_now Details | Review
fixed commit message (5.17 KB, patch)
2014-09-25 15:43 UTC, Luis de Bethencourt
committed Details | Review

Description Luis de Bethencourt 2014-09-25 15:08:49 UTC
Some break statements are unnecessary since they follow a goto and the code flow never gets there. As discussed in https://bugzilla.gnome.org/show_bug.cgi?id=736460
Comment 1 Luis de Bethencourt 2014-09-25 15:13:02 UTC
Created attachment 287087 [details] [review]
patch

Not sure what category to state, have 'style:' now but wondering what it should be.
Comment 2 Tim-Philipp Müller 2014-09-25 15:29:41 UTC
Comment on attachment 287087 [details] [review]
patch

Don't know if it needs a category, but "style:" seems as good as anything.

A verb nice though (i.e. "Remove ...")

And s/goto's/gotos/ :)
Comment 3 Luis de Bethencourt 2014-09-25 15:35:13 UTC
Tim! Thanks for the quick reply. Fixing and attaching patch here before merging.
Comment 4 Luis de Bethencourt 2014-09-25 15:43:28 UTC
Created attachment 287094 [details] [review]
fixed commit message

Merged
Comment 5 Luis de Bethencourt 2014-09-25 15:45:00 UTC
Comment on attachment 287094 [details] [review]
fixed commit message

Committed